# specui

./: .bowerrc  .eslintrc  .gitattributes  .gitignore  .npmignore  AUTHORS  CONTRIBUTING.md  Gruntfile.js  LICENSE  README.md  bower.json  crystal.yml  examples.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.autocode/: cache.yml  config.yml
.autocode/schema/: config.yml
.autocode/spec/: npm.yml
.autocode/template/: crystal.hbs  test.hbs  version.hbs
.changeset/: config.json  funny-elephants-promise.md  red-bottles-dance.md
.crystal/: cache.yml  config.yml
.crystal/schema/: config.yml
.crystal/spec/: npm.yml
.github/: FUNDING.yml
.github/workflows/: quality.yml  release.yml
app/: app.js  index.html  script.js  style.css
app/lib/: index.html  style.css
app/scripts/: autocode.js
apps/live/: .gitignore  package.json  tsconfig.json
apps/web/: CHANGELOG.md  next.config.js  package-lock.json  package.json  schema.prisma  tailwind.config.js
apps/web-new/: .gitignore  README.md  package.json
cli/: ascii.coffee  ascii.txt  cmd.yml
cli/lib/: ascii.js  help.js
cli/src/: ascii.coffee  help.coffee
docs/: next.config.js  package-lock.json  package.json  theme.config.tsx
docs/pages/: _meta.json  index.mdx
example/: index.js  module.js  project.js
example/myapi/: README.md
examples/tauri-mba/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-mba/src-tauri/src/: main.rs
lib/: autocode.js  crystal.js  doc.html  error.js  version.coffee  version.js
src/: autocode.coffee  crystal.coffee  error.coffee
test/: mocha.opts
(+949 files in other folders)
