[package]
name = "vercel-dashboard-mba"
version = "0.1.0"
authors = [ ]
license = "MIT"
edition = "2021"
rust-version = "1.57"

[build-dependencies.tauri-build]
version = "1.2"
features = [ ]

[dependencies]
serde_json = "1.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "1.2"
  features = [ "macos-private-api", "shell-open", "system-tray" ]

  [dependencies.tauri-plugin-positioner]
  version = "1.0.4"
  features = [ "system-tray" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
